Realizando la parte de confirmación a través del Correo Electrónico y Asignación de Token
