# routes/api.php
@@ -21,8 +21,7 @@ Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
     return $request->user();
 });
 
-Route::post('/register', [RegisterController::class, 'create']);
-
 Route::group(['prefix' => 'v1'], function () {
     Route::post('/register', [RegisterController::class, 'create']);
+    Route::post('/confirm/{confirmation_code}', [RegisterController::class, 'confirm']);
 });
